@@ -1,0 +1,13 @@
+% -*- coding: utf-8 -*-
+\indexentry{A}{400}
+\indexentry{a}{401}
+\indexentry{B}{402}
+\indexentry{b}{403}
+\indexentry{C}{404}
+\indexentry{c}{405}
+\indexentry{Ç}{406}
+\indexentry{ç}{407}
+\indexentry{U}{408}
+\indexentry{u}{409}
+\indexentry{Ü}{410}
+\indexentry{ü}{411}
