@@ -1,0 +1,29 @@
+\begin{theindex}
+
+\centerline{\bfseries ◆◆◆ A ◆◆◆}\par\nobreak
+  \item a\leaders\hbox{$\cdot$}\hfill 401
+  \item A\leaders\hbox{$\cdot$}\hfill 400
+
+  \indexspace
+
+\centerline{\bfseries ◆◆◆ C ◆◆◆}\par\nobreak
+  \item C\leaders\hbox{$\cdot$}\hfill 404
+  \item Ç\leaders\hbox{$\cdot$}\hfill 406
+  \item c\leaders\hbox{$\cdot$}\hfill 405
+  \item ç\leaders\hbox{$\cdot$}\hfill 407
+
+  \indexspace
+
+\centerline{\bfseries ◆◆◆ U ◆◆◆}\par\nobreak
+  \item u\leaders\hbox{$\cdot$}\hfill 409
+  \item U\leaders\hbox{$\cdot$}\hfill 408
+  \item ü\leaders\hbox{$\cdot$}\hfill 411
+  \item Ü\leaders\hbox{$\cdot$}\hfill 410
+
+  \indexspace
+
+\centerline{\bfseries ◆◆◆ B ◆◆◆}\par\nobreak
+  \item b\leaders\hbox{$\cdot$}\hfill 403
+  \item B\leaders\hbox{$\cdot$}\hfill 402
+
+\end{theindex}
