@@ -1,0 +1,3 @@
+% -*- coding: utf-8 -*-
+
+icu_rules "&a<<<A<C<<Ç<<c<<ç<u<<U<<ü<<Ü<b<<B"
