@@ -1,0 +1,3 @@
+% -*- coding: utf-8 -*-
+
+icu_rules "&a<<<A<C<<\U000000c7<<c<<\u00E7<u<<U<<\x{fc}<<\xDC<b<<B"
